# TCC

./: .gitignore  README.md  start_aruco.sh  start_tcc.sh  start_voice.sh  start_yolo.sh
deep_learning_command/src/drone_vision/: package.xml  setup.py
deep_learning_command/src/drone_vision/src/: aruco_detector.py  camera_viewer.py  test_webcam_yolo.py  vision_detector.py  yolo_detector.py
drone_command_router/src/drone_command_router/: CMakeLists.txt  package.xml
drone_command_router/src/drone_command_router/src/: drone_command_router.cpp
drone_core/src/drone_core/: CMakeLists.txt  package.xml
drone_core/src/drone_core/include/drone_core/: drone_controller.hpp
drone_core/src/drone_core/src/: drone_controller.cpp
gazebo_models/: model.sdf  tcc_vision.sdf
mobile_command/android_app/: settings.gradle.kts
mobile_command/android_app/app/: build.gradle.kts
mobile_command/android_app/app/src/main/: AndroidManifest.xml
mobile_command/android_app/app/src/main/java/com/example/dronecontrolapp/: MainActivity.kt
mobile_command/android_app/gradle/wrapper/: gradle-wrapper.properties
mobile_command/api_server/: main.py
mobile_command/src/mobile_command_bridge/: CMakeLists.txt  package.xml
mobile_command/src/mobile_command_bridge/src/: mobile_command_bridge.cpp
mobile_command/telegram_bot/: .env  bot.py
voice_command/src/voice_drone_control_cpp/: CMakeLists.txt  package.xml
voice_command/src/voice_drone_control_cpp/src/: relative_offboard_control.cpp  voice_input.py
