<?xml version="1.0"?>
<package format="3">

  <name>mobile_command_bridge</name>
  <version>0.0.1</version>

  <description>Bridge entre comandos mobile/HTTP e drone_core.</description>

  <maintainer email="riqueav09@gmail.com">enrique</maintainer>

  <license>UFLA</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>px4_msgs</depend>
  <depend>drone_core</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>